[gd_scene load_steps=27 format=2]

[ext_resource path="res://Interface.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://NavLabelLevel.gd" type="Script" id=3]
[ext_resource path="res://Global.gd" type="Script" id=4]
[ext_resource path="res://NavLevelB.gd" type="Script" id=5]
[ext_resource path="res://MainHandLabel.gd" type="Script" id=6]
[ext_resource path="res://Item.gd" type="Script" id=7]
[ext_resource path="res://Game.gd" type="Script" id=8]
[ext_resource path="res://HeadLabel.gd" type="Script" id=9]
[ext_resource path="res://BodyLabel.gd" type="Script" id=10]
[ext_resource path="res://ArmsLabel.gd" type="Script" id=11]
[ext_resource path="res://LegsLabel.gd" type="Script" id=12]
[ext_resource path="res://FeetLabel.gd" type="Script" id=13]
[ext_resource path="res://OffHandLabel.gd" type="Script" id=14]
[ext_resource path="res://InventoryItemList.gd" type="Script" id=15]
[ext_resource path="res://CharacterPanel.gd" type="Script" id=16]
[ext_resource path="res://ExplorationPanel.gd" type="Script" id=17]
[ext_resource path="res://CraftingPanel.gd" type="Script" id=18]
[ext_resource path="res://SmithingLevelB.gd" type="Script" id=19]
[ext_resource path="res://SmithingLabelLevel.gd" type="Script" id=20]
[ext_resource path="res://IronIngotLevelB.gd" type="Script" id=21]
[ext_resource path="res://IronIngotLabelLevel.gd" type="Script" id=22]
[ext_resource path="res://GenericLabelLevel.gd" type="Script" id=23]
[ext_resource path="res://CraftGrid.gd" type="Script" id=24]
[ext_resource path="res://SmithingVBoxContainer.gd" type="Script" id=25]
[ext_resource path="res://GenericLevelB.gd" type="Script" id=26]

[node name="Game" type="Node"]
script = ExtResource( 8 )

[node name="Player" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Global" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Item" type="Node" parent="."]
script = ExtResource( 7 )

[node name="MainContainer" type="VBoxContainer" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 1021.0
margin_bottom = 596.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopPanelContainer" type="PanelContainer" parent="MainContainer"]
margin_right = 1018.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="TopHBoxContainer" type="HBoxContainer" parent="MainContainer/TopPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1011.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Character" type="Button" parent="MainContainer/TopPanelContainer/TopHBoxContainer"]
margin_right = 197.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Character"

[node name="Exploration" type="Button" parent="MainContainer/TopPanelContainer/TopHBoxContainer"]
visible = false
margin_left = 168.0
margin_right = 332.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Exploration"

[node name="Crafting" type="Button" parent="MainContainer/TopPanelContainer/TopHBoxContainer"]
margin_left = 201.0
margin_right = 398.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Crafting"

[node name="Button4" type="Button" parent="MainContainer/TopPanelContainer/TopHBoxContainer"]
margin_left = 402.0
margin_right = 599.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Button5" type="Button" parent="MainContainer/TopPanelContainer/TopHBoxContainer"]
margin_left = 603.0
margin_right = 800.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Button6" type="Button" parent="MainContainer/TopPanelContainer/TopHBoxContainer"]
margin_left = 804.0
margin_right = 1004.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Interface" type="VBoxContainer" parent="MainContainer"]
margin_top = 38.0
margin_right = 1018.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="CharacterPanel" type="PanelContainer" parent="MainContainer/Interface" groups=[
"panels",
]]
visible = false
margin_right = 1018.0
margin_bottom = 555.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 16 )

[node name="CharacterGridContainer" type="GridContainer" parent="MainContainer/Interface/CharacterPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1011.0
margin_bottom = 548.0
columns = 2

[node name="CharacterVBoxContainer" type="VBoxContainer" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer"]
margin_right = 500.0
margin_bottom = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainHandCenterContainer" type="CenterContainer" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer/CharacterVBoxContainer"]
margin_right = 500.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainHandLabel" type="Label" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer/CharacterVBoxContainer/MainHandCenterContainer" groups=[
"equipment",
]]
margin_left = 212.0
margin_top = 29.0
margin_right = 288.0
margin_bottom = 43.0
size_flags_horizontal = 0
text = "Main Hand: "
script = ExtResource( 6 )

[node name="OffHandCenterContainer7" type="CenterContainer" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer/CharacterVBoxContainer"]
margin_top = 77.0
margin_right = 500.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OffHandLabel" type="Label" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer/CharacterVBoxContainer/OffHandCenterContainer7" groups=[
"equipment",
]]
margin_left = 218.0
margin_top = 29.0
margin_right = 282.0
margin_bottom = 43.0
size_flags_horizontal = 0
text = "Off Hand: "
script = ExtResource( 14 )

[node name="BodyCenterContainer2" type="CenterContainer" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer/CharacterVBoxContainer"]
margin_top = 154.0
margin_right = 500.0
margin_bottom = 227.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BodyLabel" type="Label" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer/CharacterVBoxContainer/BodyCenterContainer2" groups=[
"equipment",
]]
margin_left = 230.0
margin_top = 29.0
margin_right = 270.0
margin_bottom = 43.0
size_flags_horizontal = 0
text = "Body: "
script = ExtResource( 10 )

[node name="LegsCenterContainer3" type="CenterContainer" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer/CharacterVBoxContainer"]
margin_top = 231.0
margin_right = 500.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LegsLabel" type="Label" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer/CharacterVBoxContainer/LegsCenterContainer3" groups=[
"equipment",
]]
margin_left = 231.0
margin_top = 29.0
margin_right = 268.0
margin_bottom = 43.0
size_flags_horizontal = 0
text = "Legs: "
script = ExtResource( 12 )

[node name="FeetCenterContainer4" type="CenterContainer" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer/CharacterVBoxContainer"]
margin_top = 308.0
margin_right = 500.0
margin_bottom = 381.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FeetLabel" type="Label" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer/CharacterVBoxContainer/FeetCenterContainer4" groups=[
"equipment",
]]
margin_left = 232.0
margin_top = 29.0
margin_right = 268.0
margin_bottom = 43.0
size_flags_horizontal = 0
text = "Feet: "
script = ExtResource( 13 )

[node name="ArmsCenterContainer5" type="CenterContainer" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer/CharacterVBoxContainer"]
margin_top = 385.0
margin_right = 500.0
margin_bottom = 458.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ArmsLabel" type="Label" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer/CharacterVBoxContainer/ArmsCenterContainer5" groups=[
"equipment",
]]
margin_left = 229.0
margin_top = 29.0
margin_right = 271.0
margin_bottom = 43.0
size_flags_horizontal = 0
text = "Arms: "
script = ExtResource( 11 )

[node name="HeadCenterContainer6" type="CenterContainer" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer/CharacterVBoxContainer"]
margin_top = 462.0
margin_right = 500.0
margin_bottom = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeadLabel" type="Label" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer/CharacterVBoxContainer/HeadCenterContainer6" groups=[
"equipment",
]]
margin_left = 229.0
margin_top = 32.0
margin_right = 270.0
margin_bottom = 46.0
size_flags_horizontal = 0
text = "Head: "
script = ExtResource( 9 )

[node name="InventoryItemList" type="ItemList" parent="MainContainer/Interface/CharacterPanel/CharacterGridContainer" groups=[
"inventory",
]]
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 15 )

[node name="ExplorationPanel" type="PanelContainer" parent="MainContainer/Interface" groups=[
"panels",
]]
visible = false
margin_right = 1018.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 17 )

[node name="ExploGrid" type="GridContainer" parent="MainContainer/Interface/ExplorationPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1011.0
margin_bottom = 268.0
columns = 2

[node name="NavButton" type="Button" parent="MainContainer/Interface/ExplorationPanel/ExploGrid"]
margin_right = 500.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NavButtonCont" type="VBoxContainer" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton"]
margin_left = 2.0
margin_top = 48.0
margin_right = 499.0
margin_bottom = 169.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavLabelB" type="Label" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton/NavButtonCont"]
margin_right = 497.0
margin_bottom = 48.0
text = "Navigation

Current Level:"
align = 1

[node name="NavLabelLevel" type="Label" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton/NavButtonCont" groups=[
"navigation",
]]
margin_top = 52.0
margin_right = 497.0
margin_bottom = 66.0
text = "1"
align = 1
script = ExtResource( 3 )

[node name="NavLevelB" type="ProgressBar" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton/NavButtonCont" groups=[
"navigation",
]]
margin_top = 70.0
margin_right = 497.0
margin_bottom = 84.0
size_flags_horizontal = 3
script = ExtResource( 5 )

[node name="CampButton" type="Button" parent="MainContainer/Interface/ExplorationPanel/ExploGrid"]
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CampButtonCont" type="VBoxContainer" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/CampButton"]
margin_top = 48.0
margin_right = 496.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CampLabelB" type="Label" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/CampButton/CampButtonCont"]
margin_right = 496.0
margin_bottom = 48.0
text = "Camping

Current Level:"
align = 1

[node name="CampLevelLabel" type="Label" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/CampButton/CampButtonCont"]
margin_top = 52.0
margin_right = 496.0
margin_bottom = 66.0
text = "1"
align = 1

[node name="CampLevelB" type="ProgressBar" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/CampButton/CampButtonCont"]
margin_top = 70.0
margin_right = 496.0
margin_bottom = 84.0
size_flags_horizontal = 3

[node name="NavButton4" type="Button" parent="MainContainer/Interface/ExplorationPanel/ExploGrid"]
margin_top = 88.0
margin_right = 500.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NavButtonCont" type="VBoxContainer" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton4"]
margin_top = 48.0
margin_right = 496.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavLabelB" type="Label" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton4/NavButtonCont"]
margin_right = 496.0
margin_bottom = 48.0
text = "Navigation

Current Level:"
align = 1

[node name="Label" type="Label" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton4/NavButtonCont" groups=[
"NavLevel",
]]
margin_top = 52.0
margin_right = 496.0
margin_bottom = 66.0
text = "1"
align = 1

[node name="NavLevelB" type="ProgressBar" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton4/NavButtonCont"]
margin_top = 70.0
margin_right = 496.0
margin_bottom = 84.0
size_flags_horizontal = 3

[node name="NavButton5" type="Button" parent="MainContainer/Interface/ExplorationPanel/ExploGrid"]
margin_left = 504.0
margin_top = 88.0
margin_right = 1004.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NavButtonCont" type="VBoxContainer" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton5"]
margin_top = 48.0
margin_right = 496.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavLabelB" type="Label" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton5/NavButtonCont"]
margin_right = 496.0
margin_bottom = 48.0
text = "Navigation

Current Level:"
align = 1

[node name="Label" type="Label" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton5/NavButtonCont"]
margin_top = 52.0
margin_right = 496.0
margin_bottom = 66.0
text = "1"
align = 1

[node name="NavLevelB" type="ProgressBar" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton5/NavButtonCont"]
margin_top = 70.0
margin_right = 496.0
margin_bottom = 84.0
size_flags_horizontal = 3

[node name="NavButton6" type="Button" parent="MainContainer/Interface/ExplorationPanel/ExploGrid"]
margin_top = 176.0
margin_right = 500.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NavButtonCont" type="VBoxContainer" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton6"]
margin_top = 48.0
margin_right = 496.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavLabelB" type="Label" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton6/NavButtonCont"]
margin_right = 496.0
margin_bottom = 48.0
text = "Navigation

Current Level:"
align = 1

[node name="Label" type="Label" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton6/NavButtonCont"]
margin_top = 52.0
margin_right = 496.0
margin_bottom = 66.0
text = "1"
align = 1

[node name="NavLevelB" type="ProgressBar" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton6/NavButtonCont"]
margin_top = 70.0
margin_right = 496.0
margin_bottom = 84.0
size_flags_horizontal = 3

[node name="NavButton2" type="Button" parent="MainContainer/Interface/ExplorationPanel/ExploGrid"]
margin_left = 504.0
margin_top = 176.0
margin_right = 1004.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NavButtonCont" type="VBoxContainer" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton2"]
margin_top = 48.0
margin_right = 496.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavLabelB" type="Label" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton2/NavButtonCont"]
margin_right = 496.0
margin_bottom = 48.0
text = "Navigation

Current Level:"
align = 1

[node name="Label" type="Label" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton2/NavButtonCont"]
margin_top = 52.0
margin_right = 496.0
margin_bottom = 66.0
text = "1"
align = 1

[node name="NavLevelB" type="ProgressBar" parent="MainContainer/Interface/ExplorationPanel/ExploGrid/NavButton2/NavButtonCont"]
margin_top = 70.0
margin_right = 496.0
margin_bottom = 84.0
size_flags_horizontal = 3

[node name="NavGrid" type="GridContainer" parent="MainContainer/Interface/ExplorationPanel"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 1011.0
margin_bottom = 548.0
columns = 3

[node name="NavLabelLevel" type="Label" parent="MainContainer/Interface/ExplorationPanel/NavGrid"]
margin_right = 494.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Current Navigation Level:"
align = 2

[node name="Label" type="Label" parent="MainContainer/Interface/ExplorationPanel/NavGrid"]
margin_left = 498.0
margin_right = 506.0
margin_bottom = 14.0
text = "1"

[node name="NavLevel" type="ProgressBar" parent="MainContainer/Interface/ExplorationPanel/NavGrid"]
margin_left = 510.0
margin_right = 1004.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="CraftingPanel" type="PanelContainer" parent="MainContainer/Interface" groups=[
"panels",
]]
margin_right = 1018.0
margin_bottom = 555.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 18 )

[node name="CraftGrid" type="GridContainer" parent="MainContainer/Interface/CraftingPanel"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 1011.0
margin_bottom = 548.0
columns = 2
script = ExtResource( 24 )

[node name="SmithingButton" type="Button" parent="MainContainer/Interface/CraftingPanel/CraftGrid"]
margin_right = 500.0
margin_bottom = 177.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SmithingButtonCont" type="VBoxContainer" parent="MainContainer/Interface/CraftingPanel/CraftGrid/SmithingButton"]
margin_top = 48.0
margin_right = 496.0
margin_bottom = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SmithingLabelB" type="Label" parent="MainContainer/Interface/CraftingPanel/CraftGrid/SmithingButton/SmithingButtonCont"]
margin_right = 496.0
margin_bottom = 48.0
text = "Smithing

Current Level:"
align = 1

[node name="SmithingLabelLevel" type="Label" parent="MainContainer/Interface/CraftingPanel/CraftGrid/SmithingButton/SmithingButtonCont" groups=[
"smithing",
]]
margin_top = 52.0
margin_right = 496.0
margin_bottom = 66.0
text = "1"
align = 1
script = ExtResource( 20 )

[node name="SmithingLevelB" type="ProgressBar" parent="MainContainer/Interface/CraftingPanel/CraftGrid/SmithingButton/SmithingButtonCont" groups=[
"smithing",
]]
margin_top = 70.0
margin_right = 496.0
margin_bottom = 84.0
size_flags_horizontal = 3
script = ExtResource( 19 )

[node name="Button2" type="Button" parent="MainContainer/Interface/CraftingPanel/CraftGrid"]
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 177.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button3" type="Button" parent="MainContainer/Interface/CraftingPanel/CraftGrid"]
margin_top = 181.0
margin_right = 500.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button4" type="Button" parent="MainContainer/Interface/CraftingPanel/CraftGrid"]
margin_left = 504.0
margin_top = 181.0
margin_right = 1004.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button5" type="Button" parent="MainContainer/Interface/CraftingPanel/CraftGrid"]
margin_top = 362.0
margin_right = 500.0
margin_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button6" type="Button" parent="MainContainer/Interface/CraftingPanel/CraftGrid"]
margin_left = 504.0
margin_top = 362.0
margin_right = 1004.0
margin_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SmithingVBoxContainer" type="VBoxContainer" parent="MainContainer/Interface/CraftingPanel" groups=[
"panels",
]]
margin_left = 7.0
margin_top = 7.0
margin_right = 1011.0
margin_bottom = 548.0
script = ExtResource( 25 )

[node name="SmithingHBoxContainer" type="HBoxContainer" parent="MainContainer/Interface/CraftingPanel/SmithingVBoxContainer"]
margin_right = 1004.0
margin_bottom = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IronIngotButton" type="Button" parent="MainContainer/Interface/CraftingPanel/SmithingVBoxContainer/SmithingHBoxContainer"]
margin_right = 500.0
margin_bottom = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Iron Ingot"

[node name="IronIngotProgressB" type="ProgressBar" parent="MainContainer/Interface/CraftingPanel/SmithingVBoxContainer/SmithingHBoxContainer" groups=[
"actionProgress",
"smithing iron ingot",
]]
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 21 )

[node name="IronIngotInfoCont" type="VBoxContainer" parent="MainContainer/Interface/CraftingPanel/SmithingVBoxContainer/SmithingHBoxContainer"]
visible = false
margin_left = 672.0
margin_right = 1004.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IronIngotLabelInfo" type="Label" parent="MainContainer/Interface/CraftingPanel/SmithingVBoxContainer/SmithingHBoxContainer/IronIngotInfoCont"]
margin_right = 332.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Smithing

Current Level:"
align = 1
valign = 1

[node name="IronIngotLabelLevel" type="Label" parent="MainContainer/Interface/CraftingPanel/SmithingVBoxContainer/SmithingHBoxContainer/IronIngotInfoCont" groups=[
"SmithingLevel",
]]
margin_top = 52.0
margin_right = 332.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"
align = 1
valign = 1
script = ExtResource( 22 )

[node name="PanelContainer4" type="PanelContainer" parent="MainContainer/Interface"]
visible = false
margin_top = 280.0
margin_right = 1023.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelUpPanel" type="VBoxContainer" parent="."]
anchor_right = 1.167
anchor_bottom = 1.072
margin_left = 1025.0
margin_top = 6.0
margin_right = -1111.66
margin_bottom = -377.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelUpNav" type="Button" parent="LevelUpPanel"]
margin_right = 174.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Level Up Nav"

[node name="LevelUpCamping" type="Button" parent="LevelUpPanel"]
margin_top = 146.0
margin_right = 174.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Level Up Camping"

[node name="Attack" type="Button" parent="LevelUpPanel"]
margin_top = 292.0
margin_right = 174.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Attack"

[node name="testButton" type="Button" parent="LevelUpPanel"]
margin_top = 438.0
margin_right = 174.0
margin_bottom = 581.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GENERIC ITEMS" type="Node" parent="."]

[node name="GenericLevelButton" type="Button" parent="GENERIC ITEMS"]
visible = false
margin_left = 1025.0
margin_top = 474.0
margin_right = 1199.0
margin_bottom = 587.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Generic Button Cont" type="VBoxContainer" parent="GENERIC ITEMS/GenericLevelButton"]
margin_left = 2.0
margin_top = 48.0
margin_right = 499.0
margin_bottom = 169.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenericLabelB" type="Label" parent="GENERIC ITEMS/GenericLevelButton/Generic Button Cont"]
margin_right = 497.0
margin_bottom = 48.0
text = "SKILL

Current Level:"
align = 1

[node name="GenericLabelLevel" type="Label" parent="GENERIC ITEMS/GenericLevelButton/Generic Button Cont" groups=[
"GenericLevel",
]]
margin_top = 52.0
margin_right = 497.0
margin_bottom = 66.0
text = "1"
align = 1
script = ExtResource( 23 )

[node name="GenericLevelB" type="ProgressBar" parent="GENERIC ITEMS/GenericLevelButton/Generic Button Cont" groups=[
"GenericLevel",
]]
margin_top = 70.0
margin_right = 497.0
margin_bottom = 84.0
size_flags_horizontal = 3
script = ExtResource( 26 )
[connection signal="pressed" from="MainContainer/TopPanelContainer/TopHBoxContainer/Character" to="MainContainer/Interface" method="_on_Character_pressed"]
[connection signal="pressed" from="MainContainer/TopPanelContainer/TopHBoxContainer/Exploration" to="MainContainer/Interface" method="_on_Exploration_pressed"]
[connection signal="pressed" from="MainContainer/TopPanelContainer/TopHBoxContainer/Crafting" to="MainContainer/Interface" method="_on_Crafting_pressed"]
[connection signal="pressed" from="MainContainer/Interface/CraftingPanel/CraftGrid/SmithingButton" to="MainContainer/Interface" method="_on_SmithingButton_pressed"]
[connection signal="pressed" from="MainContainer/Interface/CraftingPanel/SmithingVBoxContainer/SmithingHBoxContainer/IronIngotButton" to="MainContainer/Interface" method="_on_IronIngotButton_pressed"]
[connection signal="pressed" from="LevelUpPanel/LevelUpNav" to="Player" method="_on_LevelUpNav_pressed"]
[connection signal="pressed" from="LevelUpPanel/Attack" to="Global" method="_on_Attack_pressed"]
[connection signal="pressed" from="LevelUpPanel/testButton" to="Player" method="_on_testButton_pressed"]
